# nicksknacks.me

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
pages/: about.md
pages/posts/: intro.json  intro.md
scripts/: deploy.sh  gen-self-signed-certs.sh  nicksknacks.me.service  provision.sh
src/: main.rs
static/: about.html  index.html  index.js  styles.css
static/posts/: intro.html
