[package]
name = "nicksknacks"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.3"
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["fs"] }

[build-dependencies]
chrono = "0.4.40"
maud = "0.27.0"
pulldown-cmark = "0.13.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
